crates/loxide_interpreter/tests/snapshots/integration@return__after_else.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
fun f() {
  if (false) "no"; else return "ok";
}


print f(); // expect: ok
// => str(ok)
