crates/loxide_interpreter/tests/snapshots/integration@return__after_if.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
fun f() {
  if (true) return "ok";
}


print f(); // expect: ok
// => str(ok)
