crates/loxide_interpreter/tests/snapshots/integration@return__after_while.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
fun f() {
  while (true) return "ok";
}


print f(); // expect: ok
// => str(ok)
