crates/loxide_interpreter/tests/snapshots/integration@return__at_top_level.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
return "wat"; // Error at 'return': Can't return from top-level code.


>>>>> Error Section <<<<<
  × Return in top level
   ╭────
 1 │ return "wat"; // Error at 'return': Can't return from top-level code.
   · ──────┬──────
   ·       ╰── return statement is not allowed in top level
   ╰────
