crates/loxide_interpreter/tests/snapshots/integration@return__in_function.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
fun f() {
  return "ok";
  print "bad";
}


print f(); // expect: ok
// => str(ok)
