crates/loxide_interpreter/tests/snapshots/integration@return__return_void_if_no_value.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
fun f() {
  return;
  print "bad";
}


print f(); // expect: void
// => void
